unpackaged/main/default/objects/FPC_Equipment_Detail__c/FPC_Equipment_Detail__c.object-meta.xml
<CustomObject>
    <description>Lessee Equipment to be leased detail</description>
    <label>Equipment Detail</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Equipment Detail ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Equipment Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>