unpackaged/main/default/objects/FPC_Equipment_Detail__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <label>Equipment</label>
    <referenceTo>FPC_Equipment__c</referenceTo>
    <relationshipLabel>Equipment Detail</relationshipLabel>
    <relationshipName>Equipment_Detail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>