unpackaged/main/default/objects/FPC_Equipment_Detail__c/fields/LINE_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>LINE_NUMBER__c</fullName>
    <description>Line Number - Sorting / filtering function</description>
    <inlineHelpText>Line Number - Sorting / filtering function</inlineHelpText>
    <label>LINE_NUMBER</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>