unpackaged/main/default/objects/FPC_Equipment_Detail__c/fields/LONG_DESCRIPTION__c.field-meta.xml
<CustomField>
    <fullName>LONG_DESCRIPTION__c</fullName>
    <description>Long Description of the equipment.</description>
    <inlineHelpText>Type in a description of the equipement.</inlineHelpText>
    <label>LONG_DESCRIPTION</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>